# payload-obfuscator

./: .gitignore  README.md  __init__.py  __main__.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/superpowers/plans/: 2026-06-24-rebuild-modernize.md
docs/superpowers/specs/: 2026-06-24-rebuild-modernize-design.md
src/: __init__.py  __main__.py  errors.py  obfuscator.py
src/core/: pe_loader.py  pipeline.py  validator.py
src/handlers/: __init__.py  base_handler.py  control_flow.py  pe_handler.py
src/handlers/anti_analysis/: __init__.py  debugger_checks.py  handler.py  integrity_checks.py  timing_checks.py  vm_checks.py
src/handlers/pe/: __init__.py  checksum_handler.py  import_handler.py  resource_handler.py  validation_handler.py
src/handlers/string_encryption/: __init__.py  encryptor.py  string_table.py
src/stubs/: api_hasher_x64.py  generate.py  xor_decryptor_x64.py
src/techniques/: base.py  entropy_reduce.py  header_normalize.py  import_hash.py  junk_sections.py  section_rename.py  string_encrypt.py
src/utils/: __init__.py  constants.py  logging_config.py  pe_math.py
src/utils/code_mutation/: __init__.py  block_analysis.py  dispatcher_generator.py  instruction_substitutions.py  junk_instructions.py  mutator.py
src/utils/import_obfuscation/: __init__.py  resolver.py  (+1 more)
tests/: conftest.py  test_entropy_reduce.py  test_header_normalize.py  test_import_hash.py  test_junk_sections.py  test_obfuscator.py  test_pe_loader.py  test_pe_math.py  test_pipeline.py  test_section_rename.py  test_string_encrypt.py  test_validator.py
(+10 files in other folders)
